<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="place">地点</string>
    <string name="content">内容</string>
    <string name="add_friends">添加好友</string>
    <string name="confirm_activity">发起活动</string>
    <string name="prompt">提示</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">连接不到服务器，请稍后重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="voice">[语音]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="text_ack_msg">已读</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="select_activity_members">选择聚会好友</string>
    <string name="application_crashed">抱歉，应用崩溃了，通过邮件发送崩溃日志到服务器，仅会占用少量流量^_^</string>
<string name="send_crash_report"></string>
    <string name="select_party_content">选择聚会内容</string>
    <string name="select_party_member">邀请聚会同伴</string>
    <string name="cancel_activity">取消</string>
    <string name="custom_activity">自定义</string>
    <string name="location">地点</string>
    <string name="writeContent">编辑聚会内容</string>
    <string name="select_business_room">预订聚会场所</string>
    <string name="select_time">选择聚会时间</string>
    <string name="select_location">选择聚会地点</string>
    <string name="title">主题</string>
    <string name="contentDescription">文字说明</string>
    <string name="paymentType">消费方式</string>
    <string name="pay_me">我请客</string>
    <string name="pay_aa">AA吧</string>
    <string name="pay_other">想被请</string>
    <string name="introduction">简介</string>
    <string name="confirm_payment">确认支付</string>
    <string name="activity_detail">活动详情</string>
    <string name="activity_name_sample">青年餐厅吃饭</string>
    <string name="activity_content">活动内容</string>
    <string name="activity_time">活动时间</string>
    <string name="payment_sum">消费金额</string>
    <string name="enroll_users">已报名用户</string>
    <string name="enroll">报名</string>
    <string name="invite_message">%1$s邀请你加入“%2$s”</string>
    <string name="accept_invite_message">%1$s接受了你的邀请</string>
    <string name="refuse_invite_message">%1$s拒绝了你的邀请</string>
    <string name="apply_message">%1$s申请加入“%2$s”</string>
    <string name="accept_apply_message">%1$s接受了你的申请</string>
    <string name="refuse_apply_message">%1$s拒绝了你的申请</string>
	<string name="finish_activity_message">活动“%1$s”已经完成</string>
    <string name="doing_activity">正在进行的活动</string>
    <string name="finish_activity">已经完成的活动</string>
    <string name="none_intro_content">未填写简介</string>
    <string name="post_comment_message">“%1$s”评论了您的活动:%2$s</string>
    <string name="reply_comment_message">“%1$s”回复了您的评论:%2$s</string>
    <string name="xiaohui_footer_text">正在加载...</string>
    <string name="xiaohui_footer_text_loafail">加载失败</string>
    <string name="fanhui">返回</string>
    <string name="fabu">发布活动</string>
    <string name="zhuti">主题</string>
    <string name="duixiang">约会对象</string>
    <string name="nv">女</string>
    <string name="nan">男</string>
    <string name="buxian">不限</string>
    <string name="daiguimi">对方可携带一名闺蜜</string>
    <string name="register_text">Register</string>
    <string name="telephone_number">PhoneNumber</string>
    <string name="name_is_null">Please text phone number!</string>
    <string name="password_is_null">Please text password</string>
    <string name="user_name_invalid">Invalid Phone Number!</string>
    <string name="password_confirm_error">您两次输入的密码不一致，请重新输入</string>
    <string name="my_orders">My Orders</string>
	<string name="viewed_hotels">Viewed Hotels</string>
	<string name="flight_status">Flight Status</string>
	<string name="search_history">Search History</string>
	<string name="setting">Setting</string>
	<string name="feed_back">Feedback</string>
	<string name="cabin_class">Class</string>
	<string name="ID">ID</string>
	<string name="identity_card_ID">Identity card ID</string>
    <string name="CMONEY">C-Money</string>
    <string name="PASSPORT_DIGITS">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="TEMPERATURE">℃</string>
    <string name="UNIT_KM">km</string>
    <string name="UNIT_MI">mi</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">About us</string>
    <string name="about_us_1">Flight and hotel booking in the palm of your hand</string>
    <string name="about_us_2">"China's Leading Online Travel Agent"</string>
    <string name="about_us_3">60,000,000 members</string>
    <string name="about_us_4">2,500,000 real user reviews</string>
    <string name="about_us_5">235,000 hotels in 173 countries</string>
    <string name="about_us_6">Low Price Guarantee on China hotels</string>
    <string name="about_us_7">Safe, secure payment options</string>
    <string name="about_us_8">Award-winning Customer Service</string>
    <string name="about_us_9">"Ctrip.com is China's leading online travel agent, serving customers in China and around the world in eight different languages."</string>
    <string name="accept">Accept</string>
    <string name="account">Account</string>
    <string name="account_hint">Phone number</string>
    <string name="actual_carrier">● Actual carrier (Codeshare)</string>
    <string name="add_a_passenger">Add a passenger</string>
    <string name="add_a_traveler">Add a traveler</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="add_to_calendar_failed">There was an issue accessing your calendar.</string>
    <string name="add_to_calendar_success">Your booking was successfully added to your calendar.</string>
    <string name="adult_tickets_only">(Adult tickets only)</string>
    <string name="adurl">http://pages.english.ctrip.com/mobile/ads/adandroid_v2</string>
    <string name="aircraft_type">Aircraft type:</string>
    <string name="airfare">Airfare</string>
    <string name="airline">Airline</string>
    <string name="airport">Airport</string>
    <string name="airport_nearby">Nearby airports</string>
    <string name="airport_nearby_no_data">No nearby airports.</string>
    <string name="airport_nearby_search_failed">Nearby airports search failed.</string>
    <string name="app_name">Booking min</string>
    <string name="apply">Apply</string>
    <string name="area">Area</string>
    <string name="arrival_city">To</string>
    <string name="arrival_gate">Arrival Gate</string>
    <string name="arrival_time">Arrival time</string>
    <string name="baggage">Baggage carousel number</string>
    <string name="baggage_restrictions">● Baggage restrictions</string>
    <string name="basic_info">Basic information</string>
    <string name="bedding">Bedding:</string>
    <string name="birth">Date of birth</string>
    <string name="boarding_gate">Boarding Gate</string>
    <string name="book">Book</string>
    <string name="book_room_tips">Only one guest name should be entered for one room.</string>
    <string name="breakfast_included">%d breakfast(s) included</string>
    <string name="breakfast_is_included">with breakfast</string>
    <string name="breakfast_not_included">no breakfast</string>
    <string name="business">Business</string>
    <string name="calendar_flight_tips">Please check in for your flight on time. %1$s, %2$s (Departing: %3$s)</string>
    <string name="calendar_hotel_tips">Please check in to your hotel on time. %1$s, (%2$s)</string>
    <string name="call">Call</string>
    <string name="call_hongkong">HongKong +852-3610-6666</string>
    <string name="call_hotel">Call hotel?</string>
    <string name="call_international">International +86-513-8918-6110</string>
    <string name="call_mainland_china">Mainland China 400-920-6662</string>
    <string name="call_taiwan">TaiWan +886-2-5580-3988</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_order">Cancel order</string>
    <string name="cancel_order_failed">Cancelation failed. Please try again or contact us for help.</string>
    <string name="cancel_order_message">Are you sure you want to cancel this reservation?</string>
    <string name="cancel_order_success">Order canceled successfully!</string>
    <string name="cancellation">Cancellation</string>
    <string name="cannot_auto_locate">We cannot auto-locate you. Please select your city manually.</string>
    <string name="cardholder_name">Cardholder name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="search">Search</string>
    <string name="get_checkCode">Send checkcode to your phone</string>
    <string name="CheckCode">CheckCode</string>
</resources>