<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp" >

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/activity_detail"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_treasure_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_title"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="5dp"
        android:text="@string/activity_name_sample"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_treasure_name" >

        <ImageView
            android:id="@+id/imageView_creator"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="5dp"
            android:src="@android:drawable/btn_star" />

        <TextView
            android:id="@+id/textView_doing_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@+id/imageView_creator"
            android:text="老吴" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/activity_content" />

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_content"
        android:layout_below="@+id/textView_content"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/activity_time" />

    <TextView
        android:id="@+id/textView_paysum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_time"
        android:layout_below="@+id/textView_time"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/payment_sum" />

    <TextView
        android:id="@+id/textView_enroll_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_paysum"
        android:layout_below="@+id/textView_paysum"
        android:layout_marginTop="10dp"
        android:text="@string/enroll_users" />

    <Button
        android:id="@+id/button_enroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/enroll" />

</RelativeLayout>