<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <EditText
        android1:id="@+id/editText_title"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_marginLeft="10dp"
        android1:layout_marginRight="10dp"        
        android1:hint="填写聚会标题" >
        <requestFocus />
    </EditText>

    <Button
        android1:id="@+id/button_confirm"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentBottom="true"
        android1:layout_alignParentLeft="true"
        android1:layout_marginLeft="10dp"
        android1:text="@string/confirm_activity" />

    <Button
        android1:id="@+id/button_cancel"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignBottom="@+id/button_confirm"
        android1:layout_alignParentRight="true"
        android1:layout_marginRight="10dp"
        android1:text="@string/cancel_activity" />

    <EditText
        android1:id="@+id/editText_content"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/editText_title"
        android1:layout_marginLeft="10dp"
        android1:layout_marginRight="10dp"
        android1:layout_marginTop="21dp"
        android1:ems="10"
        android1:hint="填写聚会内容"
        android1:inputType="textMultiLine"
        android1:lines="6"
        android1:scrollbarStyle="insideOverlay" />

    <Button
        android1:id="@+id/button_select_business"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/editText_content"
        android1:layout_marginTop="26dp"
        android1:layout_marginLeft="10dp"
        android1:layout_marginRight="10dp"           
        android1:text="@string/select_business_room" />

    <Button
        android1:id="@+id/button_select_friends"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/button_select_business"
        android1:layout_marginLeft="10dp"
        android1:layout_marginRight="10dp"
        android1:layout_marginTop="27dp"
        android1:text="@string/select_party_member" />

    <Button
        android1:id="@+id/button_select_date"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/button_select_friends"
        android1:layout_marginLeft="10dp"
        android1:layout_marginRight="10dp"
        android1:layout_marginTop="30dp"
        android1:text="@string/select_time" />

    <Button
        android1:id="@+id/button_select_location"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_below="@+id/button_select_date"
        android1:layout_marginLeft="10dp"
        android1:layout_marginRight="10dp"
        android1:layout_marginTop="30dp"
        android1:text="@string/select_location" />

</RelativeLayout>