<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <!--
          android.support.v4.view.ViewPager  
        android:id="@+id/pager"  
        android:layout_width="match_parent"  
        android:layout_height="wrap_content"-->

    <RelativeLayout
        android1:id="@+id/layout_controll"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_alignParentTop="true"
        android1:layout_marginLeft="10dp"
        android1:layout_marginRight="10dp"
        android1:layout_marginTop="5dp" >

        <Button
            android1:id="@+id/button_category"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:text="@string/content" />

        <Button
            android1:id="@+id/button_location"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_alignParentTop="false"
            android1:layout_centerHorizontal="true"
            android1:layout_centerInParent="true"
            android1:text="@string/location" />

        <Button
            android1:id="@+id/button_search"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_alignParentTop="true"
            android1:layout_alignParentRight="true"
            android1:text="@string/search" />

    </RelativeLayout>

    <LinearLayout
        android1:id="@+id/layout_middle"
        android1:layout_width="match_parent"
        android1:layout_height="wrap_content"
        android1:layout_below="@+id/layout_controll"
        android1:orientation="horizontal" >

    </LinearLayout>

    <RelativeLayout
        android1:id="@+id/layout_content"
        android1:layout_width="match_parent"
        android1:layout_height="match_parent"
        android1:layout_below="@+id/layout_middle"
        android1:layout_marginTop="5dp"
         >

        <ListView
            android1:id="@+id/listView_content"
            android1:layout_width="match_parent"
            android1:layout_height="match_parent" >
        </ListView>

    </RelativeLayout>

</RelativeLayout>